<resources>
    <string name="app_name">Risk Of Rain 2 Survivors</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="acrid">Acrid</string>
    <string name="engineer">Engineer</string>
    <string name="loader">Loader</string>
    <string name="huntress">Huntress</string>
    <string name="mercenary">Mercenary</string>
    <string name="mul_t">MUL-T</string>
    <string name="commando">Commando</string>
    <string name="artificer">Artificer</string>
    <string name="rex">REX</string>
    <string name="acrid_title">Acrid</string>
    <string name="acrid_model">imageView</string>
    <string name="health">Health</string>
    <string name="_160_48_per_level">160(+48 per Level)</string>
    <string name="health_regen">Health Regen</string>
    <string name="_2_5_s_0_5_perlevel">2.5/s(+0.5 perLevel)</string>
    <string name="damage">Damage</string>
    <string name="_15_3_per_level">15(+3 per Level)</string>
    <string name="armor">Armor</string>
    <string name="_20">20</string>
    <string name="how_to_unlock">How To Unlock</string>
    <string name="under_the_bazaar_in_the_bazaar_between_time_there_is_a_hidden_cave_that_leads_to_a_purple_portal_this_portal_leads_to_the_void_fields_beating_the_nine_challenge_cells_in_the_void_fields_will_unlock_acrid">Under the Bazaar in the Bazaar Between Time there is a hidden cave that leads to a purple portal. This portal leads to the Void Fields. Beating the nine challenge cells in the Void Fields will unlock Acrid.</string>
    <string name="gameplay">Gameplay</string>
    <string name="GOOGLE_API_KEY">AIzaSyBuAQpqi6yGSC8Z8ZkmmGgYbLeFy9kn6IU</string>
    <string name="acrid_gameplay_link">Link</string>
    <string name="acrid_gameplay_link_url">https://youtu.be/55fDnTMyY5E</string>
    <string name="artificer_title">Artificer</string>
    <string name="damage_title">Damage</string>
    <string name="artifier_health_regen">1/s(+0.2 per level)</string>
    <string name="artificer_health_regen_title">Health Regen</string>
    <string name="artificer_health_regen">110 (+33 per level)</string>
    <string name="artificer_health_title">Health</string>
    <string name="artificer_armor_title">Armor</string>
    <string name="artificer_damage">12(+2.4 per level)</string>
    <string name="artificer_armor">0</string>
    <string name="artificer_unlock_title">How to Unlock</string>
    <string name="artificer_unlock">The Artificer is unlocked upon completing the Challenge Pause. (Free the survivor suspended in time.) Collect 11 Lunar Coins and find a Newt Altar. Pay one coin so the blue portal spawns upon charging the teleporter to 100%. Use the blue portal instead of the teleporter and head to the shop. To the right of Newt is Artificer suspended in time. Pay 10 coins to unlock Artificer.</string>
    <string name="artifier_gameplay_title">Gameplay</string>
    <string name="artificer_gameplay_link">https://youtu.be/MTYvC6t0z4k</string>
    <string name="artifier_model">artifier_model</string>
    <string name="commando_title">Commando</string>
    <string name="commando_damage">Damage</string>
    <string name="commando_health_regen">1/s(+0.2 per level)</string>
    <string name="commando_health_regen_title">Health Regen</string>
    <string name="commando_health">110(+33 per level)</string>
    <string name="commando_health_title">Health</string>
    <string name="commando_armor_title">Armor</string>
    <string name="commando_damage_title">12(+2.4 per level)</string>
    <string name="commando_armor">0</string>
    <string name="commando_unlock_title">How to Unlock</string>
    <string name="commando_unlock">Commando is unlocked at the beginning of the game.</string>
    <string name="commando_gameplay_title">Gameplay</string>
    <string name="commando_gameplay_link">https://youtu.be/dskfiP2gRAc</string>
    <string name="commando_model">commando_model</string>
    <string name="enigneer_title">Enigneer</string>
    <string name="engineer_damage_title">Damage</string>
    <string name="engineer_health_regen">1/s(+0.2 per level)</string>
    <string name="engineer_health_regen_title">Health Regen</string>
    <string name="engineer_health">130(+39 per level)</string>
    <string name="engineer_health_title">Health</string>
    <string name="engineer_armor_title">Armor</string>
    <string name="engineer_damage">14(+2.8 per lavel)</string>
    <string name="engineer_armor">0</string>
    <string name="engineer_unlock_title">How to Unlock</string>
    <string name="engineer_unlock">The Engineer is unlocked upon completing the Challenge Engineering Perfection(Complete 30 stages.)</string>
    <string name="engineer_gameplay_title">Gameplay</string>
    <string name="engineer_gameplay_link">https://youtu.be/0f_apkljkos</string>
    <string name="engineer_model">engineer_model</string>
    <string name="huntress_health">90(+27 per level)</string>
    <string name="huntress_health_title">Health</string>
    <string name="huntress_title">Huntress</string>
    <string name="huntress_health_regen_title">Health Regen</string>
    <string name="huntress_health_regen">1/s(+0.2 per level)</string>
    <string name="huntress_damage_title">Damage</string>
    <string name="huntress_damage">12(+2.4 per level)</string>
    <string name="huntress_armor_title">Armor</string>
    <string name="huntress_armor">0</string>
    <string name="huntress_unlock_title">How to Unlock</string>
    <string name="huntress_unlock">The Huntress is unlocked upon completing the Challenge \"Warrior\" (Reach and complete the 3rd Teleporter event without dying.) Note that you can\'t get the achievement if you enter a blue portal at the end of stage 3.</string>
    <string name="huntress_gameplay_title">Gameplay</string>
    <string name="huntress_gameplay_link">https://youtu.be/LHMuppL8QAo</string>
    <string name="huntress_model">huntress_model</string>
    <string name="loader_title">Loader</string>
    <string name="loader_armor_title">Armor</string>
    <string name="loader_health_regen">2.5/s(+0.5 per level)</string>
    <string name="loader_health_regen_title">Health Regen</string>
    <string name="loader_health">160(+48 per level)</string>
    <string name="loader_health_title">Health</string>
    <string name="loader_damage_title">Damage</string>
    <string name="loader_armor">20</string>
    <string name="loader_damage">12(+2.4 per level)</string>
    <string name="loader_unlock_title">How To Unlock</string>
    <string name="loader_unlock">Loader is unlocked upon completing the challenge \"Guidance Offline\". (Destroy five of the egg nests in Siren\'s Call, then defeat the spawned boss.) (Note: can be unlocked on Drizzle)</string>
    <string name="loader_gameplay_title">Gameplay</string>
    <string name="loader_gameplay_link">https://youtu.be/StYcp8JONjU</string>
    <string name="loader_model">loader_model</string>
    <string name="mercenary_title">Mercenary</string>
    <string name="mercenary_damage_title">Damage</string>
    <string name="mercenary_health_regen">2.5/s(+0.5 per level)</string>
    <string name="mercenary_health_regen_title">Health Regen</string>
    <string name="mercenary_health">140(+42 per level)</string>
    <string name="mercenary_health_title">Health</string>
    <string name="percenary_damage">12(+2.4 per level)</string>
    <string name="mercenary_armor_title">Armor</string>
    <string name="mercenary_armor">20</string>
    <string name="mercenary_unlock_title">How to Unlock</string>
    <string name="mercenary_unlock">The Mercenary is unlocked upon completing the Challenge True Respite. (Obliterate yourself at the Obelisk.)</string>
    <string name="mercenary_gameplay_title">Gameplay</string>
    <string name="mercenary_gameplay_link">https://youtu.be/TUjWPKyYTdM</string>
    <string name="mercenary_model">mercenary_model</string>
    <string name="mul_t_title">Mul_T</string>
    <string name="mul_t_damage">11(+2.2 per level)</string>
    <string name="mul_t_health_regen">1/s(+0.2 per level)</string>
    <string name="mul_t_health_regen_title">Health Regen</string>
    <string name="mul_t_health">200(+60 per level)</string>
    <string name="mul_t_health_title">Health</string>
    <string name="mul_t_armor_title">Armor</string>
    <string name="mul_t_damage_title">Damage</string>
    <string name="mul_t_armor">12</string>
    <string name="mul_t_unlock_title">How to Unlock</string>
    <string name="mul_t_unlock">MUL-T is unlocked upon completing the Challenge Verified. (Complete the first Teleporter event 5 times.)</string>
    <string name="mul_t_gameplay_title">Gameplay</string>
    <string name="mul_t_gameplay_link">https://youtu.be/llSLNdVF_tA</string>
    <string name="mul_t_model">mul_t_model</string>
    <string name="rex_damage_title">Damage</string>
    <string name="rex_health_regen">1/s(+0.2 per level)</string>
    <string name="rex_health_regen_title">Health Regen</string>
    <string name="rex_health">130(+39 per level)</string>
    <string name="rex_health_title">Health</string>
    <string name="rex_damage">12(+2.4 per level)</string>
    <string name="rex_armor_title">Armor</string>
    <string name="rex_title">REX</string>
    <string name="rex_armor">20</string>
    <string name="rex_unlock_title">How to Unlock</string>
    <string name="rex_unlock">REX is unlocked by completing the challenge \"Power Plant\". (Repair the broken robot with an Escape Pod\'s Fuel Array.) The challenge requires the player to acquire the Fuel Array item at the back of the escape pod at the beginning of the game, and escort the equipment all the way to Abyssal Depths. Within the area, the player has to make their way to the top portion of the map via the geysers placed around the area, where you will find REX\'s model as an interactable. Interacting with REX with the fuel cell equipped completes the challenge, unlocking REX as a playable survivor in future runs. Note: The Fuel Array occupies your equipment slot, but as long as you escort the equipment to stage 4, you can temporarily equip another equipment in prior stages to charge the teleporter and clear bosses without the Array\'s penalty. Also, beware that the MUL-T and Acrid survivors are unable to obtain the Fuel Array solo, as they deploy without an escape pod at the beginning of the run.</string>
    <string name="rex_gameplay_title">Gameplay</string>
    <string name="rex_gameplay_link">https://youtu.be/VFWbIJ0BaHw</string>
    <string name="rex_model">rex_model</string>
</resources>