<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="@drawable/void_fields">

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/acrid_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/acrid_title"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/acrid_model"
                android:src="@drawable/acrid_model" />

            <TextView
                android:id="@+id/acrid_health_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/health"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_160_48_per_level"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_health_regen_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/health_regen"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_health_regen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_2_5_s_0_5_perlevel"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_damage_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/damage"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_damage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_15_3_per_level"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_armor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/armor"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_armor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Spacer"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/acrid_unlock_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_unlock"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_unlcok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/under_the_bazaar_in_the_bazaar_between_time_there_is_a_hidden_cave_that_leads_to_a_purple_portal_this_portal_leads_to_the_void_fields_beating_the_nine_challenge_cells_in_the_void_fields_will_unlock_acrid"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/spacer2"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/acrid_gameplay_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acrid_gameplay_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acrid_gameplay_link_url"
                android:autoLink="all"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/spacer3"
                android:layout_width="100dp"
                android:layout_height="100dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>